# cognitive-os

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  CognitiveOS-Architecture-Independent-Review.md  CognitiveOS-Architecture.md  CognitiveOS-Review-Conclusions.md  README.md  RFC-0001-cognitiveos-governance-context-access.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cursor/rules/: 00-architecture-invariants.mdc  01-normative-traceability.mdc  02-workflow-docs-sync.mdc  10-rust-kernel.mdc  11-typescript-clients.mdc  12-schemas-protocol.mdc  13-effect-recovery.mdc  14-security-testing.mdc  15-conformance-evidence.mdc  16-client-directory-index.mdc  17-client-project-boundaries.mdc  18-auto-commit-and-doc-sync.mdc  19-personal-blog-boundary.mdc  use-skills.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
History/: AgentOS-Architecture copy 2.md  AgentOS-Architecture copy.md  AgentOS-Architecture.md  AgentOS：从第一性原理到认知操作系统.md  CognitiveOS-Development-Plan.md  README.md  edit_v04.py  edit_v04_fixes.txt  fix_edits.py
apps/admin-cli/: Cargo.toml
apps/admin-cli/src/: main.rs
apps/admin-cli/tests/: agent_installation.rs  m5_deterministic_fallback.rs
apps/agent-shell/: package.json
apps/cognitiveos-console/: PRODUCT-DESIGN.md  README.md
apps/kernel-server/: Cargo.toml
apps/kernel-server/src/: main.rs
apps/kernel-server/tests/: m5_http_sse.rs
apps/pi-agent-adapter/: Cargo.toml
apps/pi-agent-adapter/src/: lib.rs  main.rs
apps/pi-agent-adapter/tests/: launch_policy.rs
artifacts/evidence/: README.md
clients/: GOVERNANCE.md  MIGRATION-MAP.md  READINESS.md  README.md
clients/agent-hub/: README.md
clients/governance/: README.md  canonical-sources.md  decision-log.md  evidence-index.md  ownership.md  readiness-gates.md  traceability.md
clients/mobile/: README.md
clients/pc/: README.md
clients/plan/: README.md  dependency-dag.md  milestones.md  progress.md  risk-register.md
clients/prompts/: README.md
clients/shared/: README.md
conformance/: README.md
conformance/vectors/: agent-adapter-bypass.json  agent-installation-verification.json  agent-out-of-band-reconciliation.json  agent-recovery-reconciliation.json  akp-envelope-ambiguous-payload-002.json  akp-envelope-no-schema-pin-001.json  akp-result-error-without-machine-code-003.json  akp-stream-frame-unsequenced-004.json  cap-bind-001.json  cap-lease-003.json  capability-attenuation.json  catalog-effect-confusion.json  catalog-stale-binding.json  cim-calibration-mismatch.json  context-candidate-admission.json  context-delta-scope.json  context-rank-before-auth.json  context-render-stability.json  context-required-over-budget.json  context-resolution-stagnation.json  context-revocation-cache-reuse.json  crash-recovery.json  ctx-schema-001.json  ctx-view-001.json  cvm-stale-001.json  discovery-read-separation.json  eff-crash-001.json  eff-crash-002.json  eff-crash-003.json  eff-flow-001.json  effect-idempotency-conflict.json  effect-state-closure-008.json  effect-unknown-outcome.json  evt-schema-001.json  governed-object-legacy-metadata-001.json  governed-object-legacy-strongref-001.json  harness-episode-002.json  harness-manifest-001.json  intent-acceptance-007.json  intent-supersede-002.json  (+45 more)
crates/cognitive-akp/: Cargo.toml
crates/cognitive-akp/src/: lib.rs
crates/cognitive-akp/tests/: m5_envelope_watch.rs
crates/cognitive-conformance/: Cargo.toml
crates/cognitive-conformance/src/: exec.rs  lib.rs  main.rs
crates/cognitive-conformance/src/exec/: behavior.rs  behavior_audit.rs  behavior_m3.rs  behavior_m4.rs  behavior_m5.rs  behavior_m5_intent.rs  behavior_m6.rs
crates/cognitive-conformance/tests/: runner_execution.rs
crates/cognitive-contracts/: Cargo.toml
crates/cognitive-contracts/examples/: emit_golden.rs
crates/cognitive-contracts/src/: bundle.rs  canonical.rs  lib.rs  projection.rs
crates/cognitive-contracts/tests/: generated_types.rs  golden_fixtures.rs  ordinary_core_audit_candidate.rs  ordinary_core_audit_registration.rs  projection_fixtures.rs  schema_contract.rs
crates/cognitive-domain/: Cargo.toml
crates/cognitive-domain/src/: capability.rs  error.rs  ids.rs  lib.rs  transitions.rs  version.rs
crates/cognitive-kernel/: Cargo.toml
crates/cognitive-kernel/src/: authz.rs  budget.rs  context.rs  context_cache.rs  effects.rs  engine.rs  error.rs  executor.rs  harness.rs  intent_chain.rs  lib.rs  ports.rs  recovery.rs  replay.rs
crates/cognitive-kernel/tests/: context_pipeline.rs  engine_gate.rs  governance_gate.rs
crates/cognitive-management/: Cargo.toml
crates/cognitive-management/src/: approval.rs  audit.rs  error.rs  governance.rs  lib.rs  model.rs  plane.rs  session.rs
crates/cognitive-management/tests/: m5_fallback_verbs.rs  m5_session_approval.rs  v02_file_audit.rs  v02_registered_audit_bindings.rs
crates/cognitive-runtime/: Cargo.toml
crates/cognitive-runtime/src/: adapters.rs  channel_binding.rs  event_envelope.rs  harness_loop.rs  installer.rs  intent_flow.rs  lib.rs  oob.rs  perf.rs  pi_launcher.rs  readiness.rs  recovery_flow.rs  sandbox.rs  shell.rs  target_resolution.rs
crates/cognitive-runtime/tests/: m5_event_envelope.rs  pi_linux_launcher.rs
crates/cognitive-store/: Cargo.toml
crates/cognitive-store/src/: clock.rs  faults.rs  ids.rs  installation.rs  lib.rs  sqlite.rs
crates/cognitive-store/tests/: installation_store.rs  m2_acceptance.rs  m3_revocation_races.rs  m4_effects.rs  m4_recovery.rs  m4_tracer_bullet.rs  m5_harness.rs  m5_intent_chain.rs  m5_recovery_governance.rs
crates/cognitive-store/tests/m4_common/: mod.rs
docs/: README.md
docs/adr/: 0001-rust-typescript.md  0002-sqlite-wal.md  0003-json-http-sse.md  0004-canonical-json.md  (+12 more)
personal-blog/: .env.example  .gitignore  ASSET_PROVENANCE.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
scripts/: v01-auto-run-entry.mjs  v01-auto-run.ps1  v01-auto-run.sh
tools/: package.json  static_check.py
(+580 files in other folders)
