[package]
name = "admin-cli"
description = "Deterministic management CLI (no model dependency): inspect, stop, revoke, reconcile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
cognitive-contracts = { workspace = true }
cognitive-management = { workspace = true }

[lints]
workspace = true
