[package]
name = "admin-cli"
description = "Deterministic management CLI (no model dependency): inspect, stop, revoke, reconcile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
cognitive-contracts = { workspace = true }
cognitive-domain = { workspace = true }
cognitive-kernel = { workspace = true }
cognitive-management = { workspace = true }
cognitive-runtime = { workspace = true }
cognitive-store = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
