[package]
name = "pi-agent-adapter"
description = "Candidate-only launch boundary for the external Pi coding agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
cognitive-runtime = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
