[package]
name = "cognitive-akp"
description = "AKP envelope and the HTTP/SSE transport profile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
cognitive-contracts = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
