[package]
name = "cognitive-conformance"
description = "Conformance runner (M1: static-contract execution against registered machine assets; behavioral layers stay not-run)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
cognitive-contracts = { workspace = true }
# Draft 2020-12 validation for wire-schema vector execution (same pinned
# major as the contracts-side schema re-verification tests).
jsonschema = { version = "0.47", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
# Archived-but-stable YAML parser, used read-only for the registries.
# Revisited at the M1 runner delivery: kept, because the read-only registry
# surface is small and stable; swap only if the YAML surface grows.
serde_yaml = "0.9"
sha2 = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "conformance-runner"
path = "src/main.rs"

[lints]
workspace = true
