[package]
name = "cognitive-contracts"
description = "Schema bindings, canonical JSON, digests, IDs, references and error types (CognitiveOS reference implementation)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
