[package]
name = "cognitive-contracts"
description = "Schema bindings, canonical JSON, digests, IDs, references and error types (CognitiveOS reference implementation)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Contract-layer schema re-verification only (F-003 negative coverage).
# Not a runner: vector execution capability is Lane-CFR's M1 deliverable.
jsonschema = { version = "0.47", default-features = false }

[lints]
workspace = true
