[package]
name = "cognitive-store"
description = "SQLite repositories, append-only event log, outbox and snapshots (adapter implementing kernel ports)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# Adapter layer: implements port traits defined by cognitive-kernel.
# SQLite (rusqlite, WAL mode) is confined to this crate per ADR-0002 and
# .cursor/rules/10-rust-kernel.mdc; kernel/domain never see its types.
[dependencies]
cognitive-contracts = { workspace = true }
cognitive-domain = { workspace = true }
cognitive-kernel = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
